読んだ本を追加

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,7 @@
 {{ partial "head.html" . }}
 
 <body lang="{{ .Site.Params.lang }}">
+  <main>
   <header>
     <h1 class="name">杉本 風斗</h1>
     <p class="name-en">Kazato Sugimoto</p>
