--- a/static/index.css
+++ b/static/index.css
@@ -40,12 +40,12 @@ h2 {
   font-weight: 600;
 }
 
-ul {
+ul.no-dot {
   list-style-type: none;
   padding: 0;
 }
 
-li {
+ul.no-dot > li {
   margin-bottom: 4px;
 }
 
